# remote_manage

./: .gitignore  BuildRelease.bash  LICENSE  PLANS.md  README.md  buildEnvironment.sh  config.json.template  config.template.json  preBuildEnvironment.sh  runRootfs.sh  runscript.sh
buildout/: README.md
buildtool/: basic.mk
demo/: README.md  app_demo  server.tar.bz2  startApp  version_release.md
desktop/: README.md
doc/: Firmware.drawio  feature.md  mainFrame.drawio  protocol.md  rootfs构建方法.md  进程间交互协议.md
document/: 1.Linux基础知识学习.md  2.Construct Linux Environment.md  2.构建linux编译环境.md  3.嵌入式Linux编译.md  4.Linux命令和Shell整理.md  5.uboot.md  Embed Firmware Design Document .docx  Firmware.drawio  Firmware.puml  Linux Basic Learn and Improve Document.docx  Linux Basic Learn.md  Linux内核相关解析说明.xlsx  README.md  System Main Design Document.xlsx  ~$一起学嵌入式Linux.docx  ~WRL0436.tmp  协议文档定义.docx  开源项目框架实现结构.vsd  构建Linux编译环境.md  系统设计文档说明.xlsx  通讯协议定义.xlsx  (+2 more)
embed/main_process/: CMakeLists.txt  Makefile  README.md  lower_app.code-workspace  main.cpp
embed/main_process/center/: center_manage.cpp  center_manage.hpp  device_manage.cpp  device_manage.hpp  internal_process.cpp  internal_process.hpp
embed/main_process/driver/: device_base.hpp  driver.cpp  driver.hpp  key.cpp  key.hpp  spi_icm.cpp  spi_icm.hpp
embed/main_process/event/: thread_queue.hpp
embed/main_process/include/: includes.hpp  productConfig.hpp
embed/main_process/logger/: logger.cpp
embed/main_process/mb/: CMakeLists.txt  mb.c  mb_app.cpp  mb_app.hpp
embed/main_process/mb/ascii/: mbascii.c  mbascii.h
embed/main_process/mb/functions/: mbfunccoils.c  mbfuncdiag.c  mbfuncdisc.c  mbfuncholding.c  mbfuncinput.c  mbfuncother.c  mbutils.c
embed/main_process/mb/include/: mb.h  mbconfig.h  mbframe.h  mbfunc.h  mbport.h  mbproto.h  mbutils.h
embed/main_process/mb/port/: mbport.cpp  port.h  portevent.cpp  portserial.cpp  porttcp.cpp  porttimer.cpp
embed/main_process/mb/rtu/: mbcrc.c  mbcrc.h  mbrtu.c  mbrtu.h
embed/main_process/mb/tcp/: mbtcp.c  mbtcp.h
embed/main_process/module/: asio_server.hpp  cmd_process.cpp  cmd_process.hpp  device_process.cpp  device_process.hpp  fifo_manage.hpp
embed/main_process/mqtt/: mqtt_process.cpp  mqtt_process.hpp  mqtt_protocol.cpp  mqtt_protocol.hpp
embed/main_process/parameter/: system_config.cpp  system_config.hpp
embed/main_process/remote/: protocol.cpp  protocol.hpp  remote.hpp  tcp_thread.cpp  tcp_thread.hpp
platform/I.MX6ULL/qemu-11.0.0-patch/hw/sensor/: Kconfig  ap3216.c  gt9147.c  icm20608.c  meson.build  pcf8563.c
(+1127 files in other folders)
